****************************************************************************

General Improvements
--------------------

Third party components
----------------------

****************************************************************************
*                   Important Behavior Changes                             *
****************************************************************************

- Signals declared in QML that take "var" parameters, are now using QJSValue
  as C++ type for these parameters, instead of QVariant.

****************************************************************************
*                          Library                                         *
****************************************************************************

QtQml
------

QtQuick
------

****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************


****************************************************************************
*                          Tools                                           *
****************************************************************************


****************************************************************************
*                          Plugins                                         *
****************************************************************************
